--- a/roles/ansible-role-apache-proxy/meta/main.yml
+++ b/roles/ansible-role-apache-proxy/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: Zhyldyz Alymkulova
+  author: Tolganay Akhmetkaliyeva
   description: A simple role which installs Apache as Proxy Server
   company: Bosch
   license: MIT
