--- a/roles/r1soft_server_installation/meta/main.yml
+++ b/roles/r1soft_server_installation/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: Zhyldyz Alymkulova
+  author: Tolganay Akhmetkaliyeva
   description: your role description
   company: your company (optional)
 
