--- a/roles/ansible-role-apache/molecule/default/converge.yml
+++ b/roles/ansible-role-apache/molecule/default/converge.yml
@@ -1,6 +1,6 @@
 ---
 - name: Converge
-  hosts: all
+  hosts: r1soft-server
   become: true
 
   vars:
@@ -8,7 +8,7 @@
     apache_create_vhosts: true
     apache_vhosts_filename: "vhosts.conf"
     apache_vhosts:
-      - servername: "r1soft.awstask1.com"
+      - servername: "project.tolganay.com"
         documentroot: "/var/www/vhosts/example_com"
 
   pre_tasks:
