--- a/roles/r1soft-prerequisites/meta/main.yml
+++ b/roles/r1soft-prerequisites/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: your name
+  author: Tolganay Akhmetkaliyeva
   description: your role description
   company: your company (optional)
 
